# book_shop_api

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
apps/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py
root/: settings.py  urls.py
